src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Email_Missing__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Qualtrics filters records with no email address</inlineHelpText>
        <label># Email Missing</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Qualtrics filters records based on email opt-out rules set by your Salesforce admin</inlineHelpText>
        <label># Email Opt Out</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Message_ID__c</fullName>
        <description>The Qualtrics id of the message created for this survey, or the id of an existing Qualtrics message selected to be used with this survey.</description>
        <externalId>true</externalId>
        <label>Message ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Count__c</fullName>
        <description>Number of recipients on the panel.</description>
        <label>Panel Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_ID__c</fullName>
        <description>The id used to identify the panel created for this survey in Qualtrics.</description>
        <externalId>true</externalId>
        <label>Panel ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Name__c</fullName>
        <label>Panel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Panel_Type__c</fullName>
        <label>Panel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quick_Start_Name__c</fullName>
        <label>Quick Start Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Start_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quick Start Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Responded__c</fullName>
        <label># Responded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <formula>Sent__c + Email_Missing__c + Email_Opt_Out__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <label>Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <label># in List</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Panel Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edit Response Mappings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Message</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_ID__c</fullName>
        <description>The id used to identify this survey in Qualtrics.</description>
        <externalId>true</externalId>
        <label>Survey ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Title__c</fullName>
        <label>Survey Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Survey_Title__c</columns>
        <columns>Sent__c</columns>
        <columns>Sent_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Surveys</label>
    </listViews>
    <listViews>
        <fullName>My_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Survey_Title__c</columns>
        <columns>Sent__c</columns>
        <columns>Sent_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Surveys</label>
    </listViews>
    <nameField>
        <displayFormat>QS-{000}</displayFormat>
        <label>Qualtrics Survey</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>